_archive/content-services/5.0/glossary/glossary_a.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
---

# A

Glossary terms starting with the letter A.

[A](glossary_a.md) \| [B](glossary_b.md) \| [C](glossary_c.md) \| [D](glossary_d.md) \| [E](glossary_e.md) \| [F](glossary_f.md) \| [G](glossary_g.md) \| [H](glossary_h.md) \| [I](glossary_i.md) \| [J](glossary_j.md) \| [K](glossary_k.md) \| [L](glossary_l.md) \| [M](glossary_m.md) \| [N](glossary_n.md) \| [O](glossary_o.md) \| [P](glossary_p.md) \| [Q](glossary_q.md) \| [R](glossary_r.md) \| [S](glossary_s.md) \| [T](glossary_t.md) \| [U](glossary_u.md) \| [V](glossary_v.md) \| [W](glossary_w.md) \| [X](glossary_x.md) \| [Y](glossary_y.md) \| [Z](glossary_z.md)

-   **AAC**

    See Advanced Audio Coding.

-   **Access Control Entry**

    An Access Control Entry \(ACE\) defines a user's access rights to objects or items on a computer or network device.

-   **Access Control List**

    An Access Control List \(ACL\) is a list of Access Control Entries \(ACE\).

-   **ACE**

    See Access Control Entry.

-   **Acegi security**

    The Acegi security project was the predecessor to Spring Security, which is a Spring sub-project providing security features to enterprise systems.

-   **ACL**

    See Access Control List.

-   **ACP**

    See Alfresco Content Package.

-   **action**

    A unit of work that is performed on a node. Examples include adding an aspect, copying a node, or emailing notification.

-   **Active Directory**

    Active Directory \(AD\) is a Microsoft directory service designed for Windows that helps to manage varied and complex network resources.

-   **ActiveMQ**

    See Apache ActiveMQ.

-   **Activiti workflow engine**

    Activiti is a lightweight workflow and Business Process Management \(BPM\) platform. It provides a fast and reliable BPMN 2 process engine for Java. It is open-source and distributed under an Apache license.

    Activiti is based on open standards and is designed to integrate well with Spring applications, like Alfresco. You can learn more about Activiti on the [Activiti](http://www.activiti.org) website.

-   **activity**

    An activity in Alfresco refers to the updates to content within a site, including the uploaded files, blogs, discussions, calendars, and the team wiki.

-   **AD**

    See Active Directory.

-   **Admin Console**

    The Admin Console is an Enterprise-only application that gives you control over the management and settings of the Alfresco environment. It is a standalone console for managing the administration of the Alfresco repository and comprises separate pages that identify a particular administrative activity or feature.

-   **Admin Tools**

    Also known as Share Admin Tools. Admin Tools enables Alfresco administrators to create and manage users and groups from within Share, set application preferences, manage categories and tags, and browse the system information in the node browser.

    The Admin Tools option is visible on the menu bar only if you are an Administrator user or a user who is a member of the ALFRESCO\_ADMINISTRATORS group.

-   **Advanced Audio Coding**

    Advanced Audio Coding \(AAC\) is an audio coding system., designed to replace the MP3 format.

-   **AFTS**

    See Alfresco Full Text Search.

-   **alf\_data**

    Directory containing binary content and indexes.

-   **alfresco-global.properties**

    The `alfresco-global.properties` file contains the default configuration settings for Alfresco. The standard global properties file that is supplied with the installers contains settings for the location of the content and index data, the database connection properties, the location of third-party software, and database driver properties.

-   **Alfresco Advanced Versioning Manager**

    Alfresco Advanced Versioning Manager \(AVM\) is an advanced store implementation designed to support the version control requirements of large websites and web applications.

-   **Alfresco Community**

    Alfresco Community Edition is the open source alternative for Enterprise Content Management. Distributed under the LGPLv3 license, it is free to download and use forever. Alfresco Community has limits in terms of scalability and availability and is not supported, which makes it best suited for developers and technical enthusiasts in non-business critical environments.

    Previously known as Alfresco Community Labs.

-   **Alfresco Content Package**

    Alfresco Content Package \(ACP\) files hold exported information produced when using the Export feature.

-   **Alfresco Day Zero Configuration Guide**

    The default Alfresco configuration is for single user evaluation, which does not take into account scale and volume. Day Zero configuration is a combination of environment validation and reconfiguration of Alfresco in preparation for high traffic, concurrent transaction, large content sets and product grade hardware. The Alfresco Day Zero Configuration Guide provides instructions on how to do this.

-   **Alfresco Enterprise**

    See Alfresco One.

-   **Alfresco FTS**

    See Alfresco Full Text Search.

-   **Alfresco Full Text Search**

    Alfresco Full Text Search \(AFTS\) is the search syntax used by Alfresco. It can be used standalone or it can be embedded in CMIS-SQL using the contains\(\) predicate function. Alfresco supports the execution of a subset of the CMIS Query Language \(CMIS QL\) and Alfresco Full Text Search \(AFTS\) queries directly against the database.

-   **Alfresco in the Cloud**

    Alfresco in the Cloud is a fully managed Software as a Service \(SaaS\) enterprise content management solution that allows users to securely access their corporate documents and files on any device, from any location.

-   **Alfresco Media Management**

    Alfresco Media Management provides the capability to transform and add metadata and relationships to your digital media.

-   **Alfresco Mobile**

    Alfresco Mobile is a free mobile document management app for iOS and Android tablets and smartphones, which enables you to view all your content stored in your Alfresco on-premise or Alfresco in the Cloud accounts.

-   **Alfresco Module Package**

    An Alfresco Module Package \(AMP\) is a collection of code, XML, images, CSS, that collectively extend the functionality or data provided by the standard Alfresco repository. An AMP file can contain as little as a set of custom templates or a new category. It can contain a custom model and associated user interface customizations. It could contain a complete new set of functionality.

-   **Alfresco Office Services**

    Installing Alfresco Office Services \(AOS\) allows the Microsoft Office Suite applications \(for example, Word, PowerPoint, Visio and Excel\) to interact with Alfresco similar to SharePoint. AOS enables online editing for Office documents within Alfresco Share and allows users to modify Office files without checking them in and out. Alfresco locks the file while it is being modified and releases the lock when the file is saved and closed. AOS is installed as a core part of Alfresco Enterprise.

-   **Alfresco One**

    Alfresco One is a combination of Alfresco Enterprise and Alfresco in the Cloud. It is a Hybrid ECM \(Enterprise Content Management\) solution that combines the efficiency, collaboration, and control of an ECM platform with the agility and flexibility of the cloud. 

    With Alfresco One, document management, collaboration, and process automation can be synced to the cloud, avoiding the risks associated with uncontrolled consumer file sharing and enabling secure collaboration outside of the firewall.

    It is recommended for corporations, governments, and other organizations looking for a production-ready open source ECM solution, with the primary benefit of being a stable, reliable, certified, supported application with warranty and indemnity, with the support of Alfresco and its certified partners.

-   **Alfresco One API**

    The Alfresco One API lets you access content in an on-premise Alfresco repository, and in Alfresco cloud, from your own applications. The API is RESTful and consists of two parts; the standard CMIS API, which lets you manage and access content, and the Alfresco One REST API which lets you manage Alfresco's additional features such as ratings and comments, which are not covered by the CMIS standard.

-   **Alfresco Share**

    Alfresco Share is a rich web-based collaboration environment for managing documents, wiki content, blogs and more. Share leverages the Alfresco repository to provide content services and uses the Alfresco Surf platform to provide the underlying presentation framework.

-   **Alfresco WAR**

    See Alfresco Web Application Archive.

-   **Alfresco Web Application Archive**

    The Alfresco Web Application Archive \(WAR\) file is used to deploy Alfresco in existing application servers.

-   **Alfresco Web Editor**

    The Alfresco Web Editor is a Alfresco Surf-based web application that provides in-context editing capabilities for Alfresco repository content. The editor provides a mechanism for non-technical users to make edits to Alfresco content directly within a web page.

-   **AJAX**

    Asynchronous JavaScript and XML \(AJAX\) is a method of building fast interactive web applications, which allows the web page to update very quickly by refreshing only the part of the page required by the user.

-   **Amazon RDS**

    Amazon Relational Database Service \(Amazon RDS\) is a web service that makes it easier to set up, operate, and scale a relational database in the cloud. It provides cost-efficient, resizable capacity for an industry-standard relational database and manages common database administration tasks.

-   **AMD**

    See Asynchronous Module Definition.

-   **AMP**

    See Alfresco Module Package.

-   **AOS**

    See Alfresco Office Services.

-   **Apache Tika**

    Apache Tika is metadata detection and extraction software. See [Apache Tika](https://tika.apache.org/) for more information.

-   **Apache Tomcat**

    Apache Tomcat, also known as Tomcat, is an open source application server developed by the Apache Software Foundation that provides an environment for Java code to run in cooperation with a web server. It allows software implementation of the Java Servlet and JavaServer Pages technologies from Oracle Microsystems.

    Tomcat is the default application server used by Alfresco.

-   **Apache ActiveMQ**

    ActiveMQ is the open source message broker from Apache. See [Apache ActiveMQ](http://activemq.apache.org/) for more information.

-   **API**

    See Application Programming Interface.

-   **Application Programming Interface**

    Alfresco supports multiple Application Programming Interfaces \(APIs\) that allow developers to extend and customize the product.

-   **aspect**

    Aspects allow property and association definitions to be shared across many types of nodes. This means that a cross-cutting feature of an ECM domain model can be encapsulated and applied throughout the rigid part of the model represented by types.

-   **Asynchronous Module Definition**

    Asynchronous Module Definition \(AMD\) is a standard for defining modules in JavaScript, such that the module and its dependencies can be asynchronously loaded. This approach is particularly useful in a browser environment.

-   **AtomPub**

    Atom Publishing Protocol \(AtomPub\) is an application-level protocol for publishing and editing web resources.

-   **AWE**

    See Alfresco Web Editor.


